[build-system]
requires = ["setuptools>=70.0", "wheel", "cython"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["test*", "data*", "docs*", "demo*"]

[tool.setuptools.dynamic]
version = { file = "VERSION.txt" }

[project]
name = "raspberrypibrowserlivestream"
dynamic = ["version"]
authors = [{ name = "Jonas Heinle", email = "jonasheinle@googlemail.com" }]
description = "Lore ipsum."
readme = "README.md"
requires-python = ">=3.8"
keywords = ["blub"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "numpy",
    "loguru",
    "cython",
    "flask",
]

[project.optional-dependencies]
test = [
    "pytest",
    "line_profiler",    # line-by-line profiling
    "pytest-benchmark", # benchmark tests
    "memory-profiler",  # memory profiling
    "py-spy",           # profiling
    "pytest-cov",
    "codespell",
    "mypy",             # type checking
    "bandit",           # find security vulnerabilities
    "vulture",          # find dead code
    "ruff",             # replacement for flake8
    "ty",               # type checking
]

docs = ["sphinx", "sphinx-press-theme", "myst-parser"]

fuzzytests = [
    "atheris", # Fuzz testing
]

[project.urls]
Homepage = "https://github.com/Kataglyphis/RaspberryPiBrowserLivestream"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
filterwarnings = ["error", "ignore::DeprecationWarning"]
xfail_strict = true


[tool.vulture]
exclude = [
    'data/',
    'models/',
    '^file1\.py$',  # TOML literal string (single-quotes, no escaping necessary)
    "^file2\\.py$", # TOML basic string (double-quotes, backslash and other characters need escaping)
]

[tool.ruff]
target-version = "py38"
line-length = 88
src = ["ipa364pythonpackage", "demo", "tests"]

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"

[tool.uv.workspace]
