[project]
name="raspberry_pi_browser_livestream_raspberry_cam_python_impl"
requires-python = ">= 3.8"
dynamic = ["version"]

authors = [
  {name = "Jonas Heinle", email = "cataglyphis@jonasheinle.de"}
]
maintainers = [
  {name = "Jonas Heinle", email = "cataglyphis@jonasheinle.de"}
]

dependencies = [
    "flask",
    "loguru"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {file = "VERSION.txt"}
